--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,7 +5,42 @@
   margin: 0;
   padding: 0;
 }
+.auto-grid-5,
+.auto-grid-small,
+.auto-grid,
+.auto-grid-medium,
+.auto-grid-6,
+.auto-grid-large,
+.auto-grid-7 {
+  display: -ms-grid;
+  display: grid;
+  grid-gap: var(--space-3);
+}
 
+.auto-grid-5,
+.auto-grid-small {
+  grid-template-columns: repeat(auto-fill, minmax(var(--space-5), 1fr));
+  grid-gap: var(--space-2);
+}
+
+.auto-grid,
+.auto-grid-6,
+.auto-grid-medium {
+  grid-template-columns: repeat(auto-fill, minmax(var(--space-6), 1fr));
+}
+
+.auto-grid-7,
+.auto-grid-large {
+  grid-template-columns: 1fr;
+}
+
+@media screen and (min-width: 786px){
+.auto-grid-7,
+.auto-grid-large {
+  grid-template-columns: 1fr 1fr;
+  grid-gap: var(--space-3);
+}
+}
 
 root {
   --root-size: 56.25%; /* equal to 9px = 1em = 1rem */
@@ -121,7 +156,8 @@ nav {
   background-color: #000000;
   color: orange;
   display: flex;
-  justify-content: flex-start;
+  align-items: flex-end;
+  justify-content: flex-end;  
   margin: 2px;
   border: 1px solid white;
   padding: 5px;
