--- a/client/src/Pages/SignIn/SignIn.css
+++ b/client/src/Pages/SignIn/SignIn.css
@@ -25,6 +25,6 @@ button {
   border-radius: 0.5rem;
   border: 1px solid white;
   background-color:black;
-  color:orange;
+  color:white;
   cursor: pointer;
 }
