--- a/client/src/App.css
+++ b/client/src/App.css
@@ -300,7 +300,7 @@ font-size: 10px
 
 .delete-post-button {
   background-color: #000000;
-  color: white
+  color: white;
   display: flex;
   justify-content: center;
   align-items: center;
