--- a/client/src/App.css
+++ b/client/src/App.css
@@ -109,6 +109,7 @@ body {
 /* Nav.jsx */
 .user-nav-links {
   display: flex;
+  color: white;
   justify-content: space-between;
   list-style: none;
   padding: 0;
@@ -155,34 +156,7 @@ nav {
   color: #ffffff;
 }
 
-.darkButton {
-  background-color: #000000;
-  color: orange;
-  display: flex;
-  align-items: flex-end;
-  justify-content: flex-end;  
-  margin: 2px;
-  border: 1px solid white;
-  padding: 5px;
-
-
-}
 /* home.jsx */
-.HomeContainer{
-  justify-content: center;
-  border: solid orange 1px;
-  display: flex;
-  max-width: 100vw;
-  max-height: 100vh;
-  padding: 5px;
-  margin: 10px
-}
-
-.homeH1, .homeH2 {
-  display: flex;
-  padding: 2px;
-  border: solid orange 5px;
-}
 
 
 /* comments.jsx */
